--- a/Frontend/src/assets/styles/cmps/_GigReviews.scss
+++ b/Frontend/src/assets/styles/cmps/_GigReviews.scss
@@ -12,11 +12,18 @@
 
 .gig-review {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     background-color: white;
     border-block-start: 1px solid black;
-    margin-block-end: 10px;
+    padding: 20px;
+    // align-items: center;
 
+    img{
+        height: 48px;
+        width: 48px;
+        border-radius: 24px;
+        margin-inline-end: 20px;
+    }
     .stars {
         margin: 0;
         img {
