--- a/Frontend/src/assets/styles/cmps/_ImageCarousel.scss
+++ b/Frontend/src/assets/styles/cmps/_ImageCarousel.scss
@@ -72,6 +72,15 @@
     }
   }
 
+  .arrow::before {
+    content: '';
+    position: absolute;
+    top: -10px; /* Adjust as needed */
+    right: -10px; /* Adjust as needed */
+    bottom: -10px; /* Adjust as needed */
+    left: -10px; /* Adjust as needed */
+  }
+
   .dot-container {
     display: flex;
     justify-content: center;
