--- a/Frontend/src/assets/styles/cmps/_UserOrders.scss
+++ b/Frontend/src/assets/styles/cmps/_UserOrders.scss
@@ -1,19 +1,23 @@
 .user-orders {
     display: flex;
+    justify-content: space-between;
     margin-block-end: 20px;
 
     .orders-title {
         display: flex;
         align-items: center;
         height: 60px;
-        width: 300px;
+        width: 200px;
         padding: 23px;
         border: 1px solid $clrSecondary2;
         background-color: $clrPrimary1;
     }
 
-    ul {
-        width: 100%;
+    .orders {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 45%;
 
         li {
             width: 100%;
@@ -22,6 +26,7 @@
                 display: flex;
                 flex-direction: column;
                 width: 100%;
+                height: 200px;
                 padding: 23px;
                 border: 1px solid $clrSecondary2;
                 margin-block-start: 20px;
