--- a/Frontend/src/assets/styles/views/_DashboardPage.scss
+++ b/Frontend/src/assets/styles/views/_DashboardPage.scss
@@ -31,10 +31,6 @@
         height: fit-content;
         border: 2px solid $clrSecondary8;
 
-        &:last-child {
-            margin-bottom: 0;
-        }
-
         h6 {
             border-bottom: 2px solid;
             width: fit-content;
@@ -44,8 +40,40 @@
         }
     }
 
-    .finance-charts {
-        grid-template-columns: repeat(2, 1fr);
-        gap: 1rem;
+    .dashboard-finances-container {
+        .finance-info {
+            grid-template-columns: repeat(3, 1fr);
+            grid-template-rows: repeat(2, auto);
+            gap: 10px;
+
+            .grid-item {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                border: 2px solid $clrSecondary8;
+                padding: 10px;
+                border-radius: 5px;
+
+                .title {
+                    font-weight: bold;
+                    border-bottom: 1px solid $clrSecondary8;
+                    padding-bottom: 2px;
+                }
+
+                .info {
+                    margin-top: 1em;
+                }
+            }
+        }
+
+        .finance-charts {
+            grid-template-columns: repeat(2, 1fr);
+            gap: 1rem;
+
+            .chart-section:nth-child(3) {
+                grid-column: span 2;
+            }
+        }
     }
 }
