--- a/Frontend/src/assets/styles/cmps/_WelcomeSection.scss
+++ b/Frontend/src/assets/styles/cmps/_WelcomeSection.scss
@@ -8,7 +8,7 @@
 
         .person-info {
             position: absolute;
-            bottom: 30px;
+            bottom: 35px;
             right: 30px;
             display: flex;
             align-items: center;
@@ -17,7 +17,7 @@
             background: #ffffff24;
             border-radius: 100px;
             width: fit-content;
-            padding: 0.5em 1em;
+            padding: 0.5em 0.8em;
             border: 1px solid #ffffff66;
             backdrop-filter: blur(30px);
             transition: opacity 1s;
@@ -25,6 +25,7 @@
             .small-img {
                 width: 20%;
                 transition: opacity 1s;
+                margin-right: 0.3em;
             }
 
             .text-content {
@@ -48,10 +49,9 @@
 
         .welcome-section {
             width: 100%;
-            max-width: 1400px;
+            max-width: 1650px;
             height: 100%;
             margin: auto;
-            padding: 1em;
             position: relative;
             overflow: hidden;
 
@@ -74,7 +74,6 @@
                 z-index: 3;
                 top: 35%;
                 font-size: 40px;
-                margin-left: 0.4em;
 
                 h1 {
                     font-family: "macan-bold";
