--- a/Frontend/src/assets/styles/cmps/_GigHeader.scss
+++ b/Frontend/src/assets/styles/cmps/_GigHeader.scss
@@ -2,6 +2,16 @@
     display: flex;
     flex-direction: column;
 
+    .nav-header{
+        display: flex;
+        gap:8px;
+        padding-block-start: 12px;
+        img{
+            width: 16px;
+            height: 16px;
+        }
+    }
+
     p {
         margin: 0;
     }
@@ -12,6 +22,7 @@
 
         img {
             width: 20px;
+            height: 20px;
         }
 
         .seller-picture {
