--- a/Frontend/src/assets/styles/views/_GigDetails.scss
+++ b/Frontend/src/assets/styles/views/_GigDetails.scss
@@ -5,5 +5,7 @@
         display: flex;
         grid-column: 2;
         justify-content: space-between;
+        margin-block-start: 32px;
+        margin-block-end: 32px;
     }
 }
