--- a/Frontend/src/assets/styles/views/_HomePage.scss
+++ b/Frontend/src/assets/styles/views/_HomePage.scss
@@ -50,6 +50,7 @@
                     h3 {
                         font-size: 18px;
                         color: $clrSecondary8;
+                        line-height: 140%;
                     }
 
                     img {
@@ -59,7 +60,7 @@
                 }
 
                 p {
-                    margin-top: 1em;
+                    margin-top: 0.5em;
                     font-size: 18px;
                     line-height: 26px;
                     color: $clrSecondary6;
