fixed the filter subcatecory and fixed the padding of the main pages

--- a/Frontend/src/assets/styles/basics/_layout.scss
+++ b/Frontend/src/assets/styles/basics/_layout.scss
@@ -35,12 +35,8 @@
 }
 
 .layout-row {
-    display: flex;
-    flex-flow: row wrap;
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
     max-width: 1400px;
-    padding: 0 10px;
 }
 
 .card-grid {
