--- a/Frontend/src/assets/styles/cmps/_GigReviews.scss
+++ b/Frontend/src/assets/styles/cmps/_GigReviews.scss
@@ -1,11 +1,25 @@
 .gig-reviews {
     background-color: white;
-    .review-addition{
-        display: flex;
-        flex-direction: column;
+
+    .review-addition {
         padding: 5px;
-        .text{
+
+        .stars-input {
+            justify-content: center;
+            margin-bottom: 0.5em;
+
+            img {
+                width: 24px;
+            }
+        }
+
+        .text {
             width: 100%;
+            margin-bottom: 0.5em;
+        }
+
+        button {
+            margin: auto;
         }
     }
 }
@@ -18,14 +32,16 @@
     padding: 20px;
     // align-items: center;
 
-    img{
+    img {
         height: 48px;
         width: 48px;
         border-radius: 24px;
         margin-inline-end: 20px;
     }
+
     .stars {
         margin: 0;
+
         img {
             height: 14px;
             width: 14px;
