fixed the gigPreview and carousel

--- a/Frontend/src/assets/styles/basics/_helpers.scss
+++ b/Frontend/src/assets/styles/basics/_helpers.scss
@@ -72,6 +72,7 @@
 
 .active {
   display: block;
+  float: none;
 }
 
 .hidden {
@@ -95,6 +96,7 @@
 .shadow {
   box-shadow: 0 0.266px 1.13052px rgba(0, 0, 0, 0.069),
     0 0.89345px 3.79717px rgba(0, 0, 0, 0.101), 0 5px 17px rgba(0, 0, 0, 0.17);
+    grid-column: 1 /-1;
 }
 
 .open {
