--- a/Frontend/src/assets/styles/cmps/_GigPreview.scss
+++ b/Frontend/src/assets/styles/cmps/_GigPreview.scss
@@ -1,19 +1,23 @@
 .gig-preview {
   display: grid;
-  grid-template-rows: minmax(0, 1fr) auto;
+  // grid-template-rows: 1fr 1fr;
   background-color: #fff;
   border: 1px solid #e4e5e7;
   border-radius: 0.5em;
+  min-width: rem(245px);
+  // max-width: rem(370px);
+  width: 100%;
 
   img {
+    aspect-ratio: 5/3;
+    object-fit: cover;
     width: 100%;
-    height: 166px;
-    //height: auto;  //way to check the dots!!!!!!!
-    background-color: $clrPrimary1;
-    border: 1px solid $clrSecondary2;
-    border-top-left-radius: 0.5em;
-    border-top-right-radius: 0.5em;
-    z-index: 0;
+  //   width: 100%;
+  //   height: 166px;
+  //   //height: auto;  //way to check the dots!!!!!!!
+  //   background-color: $clrPrimary1;
+  //   border: 1px solid $clrSecondary2;
+  //   z-index: 0;
   }
 
   .gig-title img:hover {
