--- a/Frontend/src/assets/styles/main.scss
+++ b/Frontend/src/assets/styles/main.scss
@@ -31,6 +31,7 @@
 @import "cmps/GigPreview";
 
 @import "cmps/UserInfo";
+@import "cmps/UserModal";
 @import "cmps/UserGigs";
 @import "cmps/UserOrders";
 
