added user edit modal

--- a/Frontend/src/assets/styles/cmps/_UserGigs.scss
+++ b/Frontend/src/assets/styles/cmps/_UserGigs.scss
@@ -1,6 +1,7 @@
 .user-gigs {
   display: flex;
   flex-direction: column;
+  align-items: center;
   margin-block-end: 20px;
   margin-inline-start: 20px;
   color: $clrPrimary2;
