--- a/Frontend/src/assets/styles/cmps/_ImageCarousel.scss
+++ b/Frontend/src/assets/styles/cmps/_ImageCarousel.scss
@@ -27,22 +27,18 @@
       width: 100%;
       z-index: 0;
     }
-
-    // img {
-    //   width: 100%;
-    //   height: 100%;
-    //   overflow: hidden;
-    // }
   }
 
   // transition: all ease-in 0.3s;
   .arrow {
     position: absolute;
     user-select: none;
+    z-index: 1;
     opacity: 0;
     top: 50%;
     background: transparent;
-    width: 25px;
+    width: rem(32px);
+    height: rem(32px);
     transform: translateY(-50%);
     color: white;
     border: none;
