--- a/Frontend/src/assets/styles/setup/_mq.scss
+++ b/Frontend/src/assets/styles/setup/_mq.scss
@@ -32,6 +32,16 @@
     }
 
     .home-companies-section {
+        .companies {
+            @media(max-width: 1200px) {
+                gap: 1.5em;
+            }
+
+            @media(min-width: 1200px) {
+                gap: 4em;
+            }
+        }
+
         h4 {
             @media(max-width: 1200px) {
                 display: none;
