Added SelectedFilter Component. still needs work. fixed visual dom for budget filter

--- a/Frontend/src/assets/styles/basics/_helpers.scss
+++ b/Frontend/src/assets/styles/basics/_helpers.scss
@@ -57,6 +57,10 @@
   display: grid;
 }
 
+.border{
+  border: 1px solid $clrPrimary2;
+}
+
 // Media helpers
 .square-ratio {
   @include aspect-ratio(1, 1);
