--- a/Frontend/src/assets/styles/cmps/_GigFilter.scss
+++ b/Frontend/src/assets/styles/cmps/_GigFilter.scss
@@ -41,7 +41,6 @@
       position: relative;
     }
 
-
     .filter-nav {
       display: flex;
 
@@ -59,6 +58,34 @@
     height: 1em;
     width: 100%;
     background-color: #fff;
+  }
+}
+
+.selected-filters-wrapper {
+  margin: 0 auto 14px;
+  .selected-filters {
+    .select-filter {
+      background-color: #efeff0;
+      border: none;
+      border-radius: 56px;
+      color: #222325;
+      margin: 0 rem(10px) rem(10px) 0;
+      padding: 0.25em 1em;
+      transition: border-color 0.35s ease;
+      cursor: pointer;
+      display: inline-block;
+      font-family: macan-bold;
+      .remove-icon {
+        svg {
+          fill: #62646a;
+        }
+        margin-left: 12px;
+        position: relative;
+      }
+    }
+    .select-filter:hover {
+      color: #62646a;
+    }
   }
 }
 
