--- a/Frontend/src/assets/styles/basics/_base.scss
+++ b/Frontend/src/assets/styles/basics/_base.scss
@@ -94,6 +94,16 @@ textarea {
   transition: 0.15s ease-in-out;
   width: 8em;
 }
+input[type='number'] {
+  border: none;
+  outline: none;
+}
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  appearance: none;
+  -moz-appearance: textfield;
+}
 .btn {
   text-decoration: none;
   display: grid;
