--- a/Frontend/src/assets/styles/cmps/_ImageCarousel.scss
+++ b/Frontend/src/assets/styles/cmps/_ImageCarousel.scss
@@ -50,7 +50,7 @@
 
     &.left {
       left: -32px;
-      transition: left 0.2s;
+      // transition: left 0.2s ease-in-out;
       svg {
         transform: rotate(90deg);
         fill: $clrPrimary1;
@@ -59,7 +59,7 @@
 
     &.right {
       right: -32px;
-      transition: right 0.2s;
+      // transition: right 0.2s ease-in-out;
       svg {
         transform: rotate(-90deg);
         fill: $clrPrimary1;
@@ -113,6 +113,7 @@
     // background-color: #fff;
     opacity: 1;
     background: rgba(0, 0, 0, 0.2);
+    transition: all 0.5s ease-in-out;
 
     &.right {
       right: 12px;
