--- a/Frontend/src/assets/styles/cmps/_UserGigs.scss
+++ b/Frontend/src/assets/styles/cmps/_UserGigs.scss
@@ -6,6 +6,7 @@
   margin-inline-start: 20px;
   color: $clrPrimary2;
   width: 100%;
+  height: 100%;
   gap: 1em;
   .the-gigs {
     display: grid;
