--- a/Frontend/src/assets/styles/cmps/_AppHeader.scss
+++ b/Frontend/src/assets/styles/cmps/_AppHeader.scss
@@ -1,133 +1,179 @@
 .app-header {
-    position: relative;
-    z-index: 10;
-    width: 100%;
+  position: relative;
+  z-index: 10;
+  width: 100%;
 
-    &.home-page {
-        position: fixed;
-        top: 0;
+  &.home-page {
+    position: fixed;
+    top: 0;
+  }
+
+  .container {
+    max-width: 1400px;
+    margin: auto;
+    justify-content: space-between;
+  }
+
+  h1 {
+    font-family: arial;
+    font-size: 40px;
+    letter-spacing: -3px;
+
+    span {
+      color: $bgColor2;
     }
+  }
 
-    .container {
-        max-width: 1400px;
+  a:hover {
+    text-decoration: none;
+  }
+
+  .main-nav {
+    padding: 0.5em 2em;
+
+    .nav-links {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      gap: 2em;
+      align-items: center;
+      font-size: 16px;
+      font-weight: bold;
+
+      a,
+      button {
+        color: $clrSecondary6;
+        transition: color 0.3s, background-color 0.3s, border 0.3s;
+
+        &:hover {
+          color: $bgColor3 !important;
+        }
+      }
+
+      .join {
+        padding: 9px 16px;
+        border: 1px solid $bgColor3;
+        color: $bgColor3;
+        border-radius: 5px;
+        font-size: 14px;
+        font-family: 'macan-bold';
+        background: none;
+
+        &:hover {
+          background-color: #1dbf73;
+          color: #fff !important;
+          border-color: #1dbf73 !important;
+        }
+      }
+
+      .login,
+      .logout {
+        background: none;
+        font-size: 16px;
+        font-weight: bold;
+        padding: 0;
+        font-family: 'macan-regular';
+      }
+
+      .user-info {
+        align-items: center;
+        width: 32px;
+        height: 32px;
         margin: auto;
-        justify-content: space-between;
-    }
+        position: relative;
 
-    h1 {
-        font-family: arial;
-        font-size: 40px;
-        letter-spacing: -3px;
+        .user-dropdown {
+          position: absolute;
+          top: 150%;
+          right: 0;
+          background-color: #fff;
+          border: 1px solid #ddd;
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+          z-index: 10;
 
-        span {
-            color: $bgColor2;
+          &::before {
+            content: '';
+            width: 0;
+            height: 0;
+            border-style: solid;
+            border-width: 5px 17px 17px 17px;
+            border-color: transparent transparent #ddd transparent;
+            position: absolute;
+            top: -22px;
+            right: -1px;
+            z-index: -1;
+          }
+
+          &::after {
+            content: '';
+            width: 0;
+            height: 0;
+            border-style: solid;
+            border-width: 4px 16px 16px 16px;
+            border-color: transparent transparent #fff transparent;
+            position: absolute;
+            top: -20px;
+            right: 0;
+            z-index: 0;
+          }
+
+          a {
+            display: block;
+            padding: 10px 15px;
+            color: #333;
+          }
         }
-    }
 
-    a:hover {
-        text-decoration: none;
-    }
-
-    .main-nav {
-        padding: 0.5em 2em;
-
-        .nav-links {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            gap: 2em;
-            align-items: center;
-            font-size: 16px;
-            font-weight: bold;
-
-            a,
-            button {
-                color: $clrSecondary6;
-                transition: color 0.3s, background-color 0.3s, border 0.3s;
-
-                &:hover {
-                    color: $bgColor3 !important;
-                }
-            }
-
-            .join {
-                padding: 9px 16px;
-                border: 1px solid $bgColor3;
-                color: $bgColor3;
-                border-radius: 5px;
-                font-size: 14px;
-                font-family: "macan-bold";
-                background: none;
-
-                &:hover {
-                    background-color: #1dbf73;
-                    color: #fff !important;
-                    border-color: #1dbf73 !important;
-                }
-            }
-
-            .login,
-            .logout {
-                background: none;
-                font-size: 16px;
-                font-weight: bold;
-                padding: 0;
-                font-family: 'macan-regular';
-            }
-
-            .user-info {
-                align-items: center;
-                width: 32px;
-                height: 32px;
-                margin: auto;
-                position: relative;
-
-                .user-dropdown {
-                    position: absolute;
-                    top: 150%;
-                    right: 0;
-                    background-color: #fff;
-                    border: 1px solid #ddd;
-                    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-                    z-index: 10;
-
-                    &::before {
-                        content: "";
-                        width: 0;
-                        height: 0;
-                        border-style: solid;
-                        border-width: 5px 17px 17px 17px;
-                        border-color: transparent transparent #ddd transparent;
-                        position: absolute;
-                        top: -22px;
-                        right: -1px;
-                        z-index: -1;
-                    }
-
-                    &::after {
-                        content: "";
-                        width: 0;
-                        height: 0;
-                        border-style: solid;
-                        border-width: 4px 16px 16px 16px;
-                        border-color: transparent transparent #fff transparent;
-                        position: absolute;
-                        top: -20px;
-                        right: 0;
-                        z-index: 0;
-                    }
-
-                    a {
-                        display: block;
-                        padding: 10px 15px;
-                        color: #333;
-                    }
-                }
-
-                img {
-                    border-radius: 50%;
-                }
-            }
+        img {
+          border-radius: 50%;
         }
+      }
     }
+  }
 }
+// .search-bar-dim-background {
+//   position: absolute;
+//   top: 80.8889px;
+//   left: 0;
+//   background: #000;
+//   visibility: hidden;
+//   opacity: 0;
+//   height: calc(100vh - 80.8889px);
+//   width: 100%;
+//   z-index: 99;
+//   transition: all 0.1s ease-in-out;
+// }
+
+// // .app-header .main-nav .search-bar input[type='text']:focus ~ .search-bar-dim-background {
+// //     opacity: 0.6;
+// //     visibility: visible;
+// //   }
+
+// .search-bar input[type='text']:focus + .search-bar-dim-background {
+//   opacity: 0.6;
+//   visibility: visible;
+// }
+
+
+
+// .search-bar-dim-background {
+//     position: absolute;
+//     top: 80.8889px;
+//     left: 0;
+//     background: #000;
+//     visibility: hidden;
+//     opacity: 0;
+//     height: calc(100vh - 80.8889px);
+//     width: 100%;
+//     z-index: -1;
+//     transition: all 0.1s ease-in-out;
+//   }
+  
+//   /* When the input is focused, change styles */
+//   .search-bar-dim-background + .search-bar:focus-within  {
+//     opacity: 0.6;
+//     visibility: visible;
+//     z-index: 99; 
+//   }
+  
+  
