added mini navbar to gigdetails

--- a/Frontend/src/assets/styles/main.scss
+++ b/Frontend/src/assets/styles/main.scss
@@ -19,6 +19,7 @@
 @import "cmps/ServicesCarousel";
 @import "cmps/CategoryNavbar";
 
+@import "cmps/GigNavbar";
 @import "cmps/GigHeader";
 @import "cmps/AboutSeller";
 @import "cmps/GigOrder";
