--- a/Frontend/src/assets/styles/cmps/_GigNavbar.scss
+++ b/Frontend/src/assets/styles/cmps/_GigNavbar.scss
@@ -6,6 +6,26 @@
     // height: 30px;
     margin-block-start: 32px;
     margin-block-end: 30px;
+
+    .explore-category {
+        // padding: 1.25em 0 0.75em 0;
+        color: $clrPrimary2;
+    
+        Link {
+          padding: rem(9px);
+        }
+    
+        .divider {
+          color: $clrPrimary2;
+          margin-inline-start: 5px;
+          margin-inline-end: 5px;
+        }
+    }
+
+    button{
+        border: 0px;
+        background-color: $clrPrimary1;
+    }
     .gig-interactions{
         display: flex;
         align-items: center;
@@ -23,7 +43,7 @@
             padding: 2px 10px;
             margin-inline-start: 10px;
         }
-        div{
+        .share{
             display: flex;
             align-items: center;
             justify-content: center;
@@ -32,6 +52,9 @@
             border: 1px solid $clrSecondary2;
             border-radius: 8px;
             margin-inline-start: 10px;
+            &:hover{
+                background-color: $clrSecondary2;
+            }
         }
     }
 }
