--- a/Frontend/src/assets/styles/cmps/_GigReviews.scss
+++ b/Frontend/src/assets/styles/cmps/_GigReviews.scss
@@ -3,6 +3,7 @@
 
     .review-addition {
         padding: 5px;
+        margin-block-end: 10px;
 
         .stars-input {
             justify-content: center;
@@ -28,7 +29,7 @@
     display: flex;
     flex-direction: row;
     background-color: white;
-    border-block-start: 1px solid black;
+    border-block-start: 1px solid $clrSecondary2;
     padding: 20px;
     // align-items: center;
 
@@ -36,7 +37,12 @@
         height: 48px;
         width: 48px;
         border-radius: 24px;
-        margin-inline-end: 20px;
+        margin-inline-end: 16px;
+    }
+    .stars{
+        img{
+            margin-inline-end: 4px;
+        }
     }
 
     .stars {
