--- a/Frontend/src/assets/styles/cmps/_AboutSeller.scss
+++ b/Frontend/src/assets/styles/cmps/_AboutSeller.scss
@@ -1,33 +1,44 @@
 .about-seller {
     .seller {
         display: flex;
+        margin-block-start: 15px;
         margin-block-end: 15px;
-
-        img {
-            width: 20px;
-        }
-
         .seller-picture {
             width: 130px;
             height: 130px;
             border-radius: 65px;
             margin-inline-end: 10px;
         }
-
-        button {
-            margin: 0;
-            padding: 0;
-            height: 40px;
-            width: 130px;
-            color: $clrSecondary5;
-            background-color: $clrPrimary1;
-            border: 1px solid $clrSecondary5;
-            border-radius: 4px;
-
-            &:hover {
-                color: $clrPrimary1;
-                background-color: $clrSecondary5;
+        
+        .seller-stats{
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            .stars2{
+                display: flex;
+                align-items: center;
+                img {
+                    width: 20px;
+                    height: 20px;
+                    margin-inline-end: 4px;
+                }
             }
+        }
+    }
+
+    button {
+        margin: 0;
+        padding: 0;
+        height: 40px;
+        width: 130px;
+        color: $clrSecondary5;
+        background-color: $clrPrimary1;
+        border: 1px solid $clrSecondary5;
+        border-radius: 4px;
+
+        &:hover {
+            color: $clrPrimary1;
+            background-color: $clrSecondary5;
         }
     }
 
@@ -35,6 +46,7 @@
         border: 1px solid $clrSecondary2;
         color: $clrSecondary5;
         padding: 24px;
+        margin-block-start: 15px;
         margin-block-end: 15px;
 
         .seller-details {
