--- a/Frontend/src/assets/styles/cmps/_SearchBar.scss
+++ b/Frontend/src/assets/styles/cmps/_SearchBar.scss
@@ -43,7 +43,7 @@
 .app-header {
     .main-nav {
         .search-bar {
-            height: fit-content;
+            height: 42px;
             align-self: center;
 
             input[type="text"] {
