liking gigs is visible after refresh

--- a/Frontend/src/assets/styles/cmps/_UserOrders.scss
+++ b/Frontend/src/assets/styles/cmps/_UserOrders.scss
@@ -1,6 +1,7 @@
 .user-orders {
     display: flex;
     justify-content: space-between;
+    margin-block-start: 32px;
     margin-block-end: 32px;
 
     .orders-title {
