--- a/Frontend/src/assets/styles/cmps/_WelcomeSection.scss
+++ b/Frontend/src/assets/styles/cmps/_WelcomeSection.scss
@@ -9,6 +9,7 @@
         .person-info {
             position: absolute;
             bottom: 35px;
+            right: 35px;
             display: flex;
             align-items: center;
             z-index: 3;
