--- a/Frontend/src/assets/styles/cmps/_GigPreview.scss
+++ b/Frontend/src/assets/styles/cmps/_GigPreview.scss
@@ -12,18 +12,28 @@
     aspect-ratio: 5/3;
     object-fit: cover;
     width: 100%;
-  //   width: 100%;
-  //   height: 166px;
-  //   //height: auto;  //way to check the dots!!!!!!!
-  //   background-color: $clrPrimary1;
-  //   border: 1px solid $clrSecondary2;
-  //   z-index: 0;
+    //   width: 100%;
+    //   height: 166px;
+    //   //height: auto;  //way to check the dots!!!!!!!
+    //   background-color: $clrPrimary1;
+    //   border: 1px solid $clrSecondary2;
+    //   z-index: 0;
   }
 
-  .gig-title img:hover {
+  .carousel-container:hover ~ .preview-body .gig-title {
     text-decoration: underline;
   }
 
+  .gig-title {
+    display: block;
+    overflow: hidden; 
+    text-overflow: ellipsis;
+    min-height: 2.4em; 
+    line-height: 1.2; 
+    max-height: 2.4em;
+    padding: 0 0 0.25em 0;
+    margin-top: rem(5px);
+  }
   .preview-user-info {
     font-size: 0.875rem;
     display: flex;
@@ -52,18 +62,8 @@
     }
   }
 
-  .gig-title {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    // display: -webkit-box;
-    // -webkit-box-orient: vertical;
-    // -webkit-line-clamp: 2;
-    padding: 0 0.5em;
-    margin-top: rem(5px);
-  }
-
   .user-rating {
-    padding: 0 0.5em;
+    padding: 0.5em 0 0;
 
     .rate {
       padding: 0 0.25em;
@@ -78,9 +78,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 2.8125em;
-    padding: 0.625em 0.5em;
-    border-top: 0.0625em solid $clrSecondary2;
+    margin-block-start: .5em;
 
     span {
       .i {
