--- a/Frontend/src/assets/styles/main.scss
+++ b/Frontend/src/assets/styles/main.scss
@@ -35,6 +35,7 @@
 @import "cmps/UserModal";
 @import "cmps/UserGigs";
 @import "cmps/UserOrders";
+@import "cmps/DenyModal";
 
 @import "cmps/ImageCarousel";
 @import "cmps/ShoppingCart";
