--- a/Frontend/src/assets/styles/cmps/_DenyModal.scss
+++ b/Frontend/src/assets/styles/cmps/_DenyModal.scss
@@ -1,12 +1,12 @@
-.user-modal{
+.deny-modal{
     position: fixed;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    width: 400px;
-    height: 400px;
-    padding: 10px;
+    width: 200px;
+    height: 200px;
+    padding: 1.5em;
     border: 1px solid $clrSecondary2;
     border-radius: 0.5em;
     top: 50%;
@@ -14,12 +14,12 @@
     translate: -50% -50%;
     background-color: $clrPrimary1;
     z-index: 100;
-    img{
-        width: 200px;
-        height: 200px;
+    .reason{
+        width: 100%;
+        // height: 100%;
     }
 }
-.modal-background{
+.deny-background{
     position: fixed;
     height: 100%;
     width: 100%;
