slight design tweaks to gig navbar

--- a/Frontend/src/assets/styles/setup/_variables.scss
+++ b/Frontend/src/assets/styles/setup/_variables.scss
@@ -12,6 +12,7 @@ $clrSecondary6: #62646a;
 $clrSecondary7: #575353;
 $clrSecondary8: #404145;
 $clrSecondary9: #f1fdf7;
+$clrSecondary10: #e4e5e7;
 
 $bgColor1: #0a4226;
 $bgColor2: #2dd12d;
