--- a/Frontend/src/assets/styles/cmps/_GigNavbar.scss
+++ b/Frontend/src/assets/styles/cmps/_GigNavbar.scss
@@ -1,60 +1,91 @@
-.gig-navbar{
+.gig-navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    // height: 30px;
     margin-block-start: 32px;
     margin-block-end: 30px;
 
     .explore-category {
-        // padding: 1.25em 0 0.75em 0;
         color: $clrPrimary2;
-    
+
         Link {
-          padding: rem(9px);
+            padding: rem(9px);
         }
-    
+
         .divider {
-          color: $clrPrimary2;
-          margin-inline-start: 5px;
-          margin-inline-end: 5px;
+            color: $clrPrimary2;
+            margin-inline-start: 5px;
+            margin-inline-end: 5px;
         }
     }
 
-    button{
+    button {
         border: 0px;
         background-color: $clrPrimary1;
     }
-    .gig-interactions{
+
+    .gig-interactions {
         display: flex;
         align-items: center;
         justify-content: end;
         width: 35%;
-        img{
-            width: 15px;
-            height: 15px;
+
+        img {
+            width: 16px;
+            height: 16px;
         }
-        span{
+
+        span {
             display: flex;
             align-items: center;
             border: 1px solid $clrSecondary2;
             border-radius: 3px;
             padding: 2px 10px;
             margin-inline-start: 10px;
-        }
-        .share{
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 50px;
-            height: 30px;
-            border: 1px solid $clrSecondary2;
-            border-radius: 8px;
-            margin-inline-start: 10px;
-            &:hover{
-                background-color: $clrSecondary2;
+            height: 31px;
+            position: relative;
+
+            &::before,
+            &::after {
+                content: "";
+                position: absolute;
+                display: block;
+                width: 0;
+                height: 0;
+                border-style: solid;
             }
+
+            &::before {
+                border-color: transparent #dadbdd transparent transparent;
+                left: -9px;
+                top: 50%;
+                transform: translateY(-50%);
+                border-width: 8px 9px 8px 0;
+            }
+
+            &::after {
+                border-color: transparent #fff transparent transparent;
+                border-width: 6px 8px 6px 0;
+                left: -8px;
+                top: 8px;
+                z-index: 3;
+            }
+        }
+    }
+
+    .share {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 48px;
+        height: 34px;
+        border: 1px solid $clrSecondary10;
+        border-radius: 8px;
+        margin-inline-start: 10px;
+
+        &:hover {
+            background-color: $clrSecondary10;
         }
     }
 }
