--- a/Frontend/src/assets/styles/main.scss
+++ b/Frontend/src/assets/styles/main.scss
@@ -25,6 +25,7 @@
 @import "cmps/GigOrder";
 @import "cmps/GigInfo";
 @import "cmps/GigReviews";
+@import "cmps/ShareGigModal";
 
 @import "cmps/GigFilter";
 @import "cmps/MenuFilterContent";
