--- a/Frontend/src/assets/styles/setup/_variables.scss
+++ b/Frontend/src/assets/styles/setup/_variables.scss
@@ -13,6 +13,7 @@ $clrSecondary7: #575353;
 $clrSecondary8: #404145;
 $clrSecondary9: #f1fdf7;
 $clrSecondary10: #e4e5e7;
+$clrSecondary11: #95979d;
 
 $bgColor1: #0a4226;
 $bgColor2: #2dd12d;
