--- a/Frontend/src/assets/styles/main.scss
+++ b/Frontend/src/assets/styles/main.scss
@@ -31,6 +31,7 @@
 @import "cmps/MenuFilterContent";
 @import "cmps/GigList";
 @import "cmps/GigPreview";
+@import "cmps/Pagination";
 
 @import "cmps/UserInfo";
 @import "cmps/UserModal";
