--- a/Frontend/src/assets/styles/setup/_mq.scss
+++ b/Frontend/src/assets/styles/setup/_mq.scss
@@ -248,3 +248,13 @@
         padding: 2em;
     }
 }
+
+.app-footer {
+    @media (max-width: 1400px) {
+        padding: 1em 2em;
+    }
+
+    @media (min-width:1400px) {
+        padding: 1em 0em;
+    }
+}
