minor tweak to join section

--- a/Frontend/src/assets/styles/setup/_mq.scss
+++ b/Frontend/src/assets/styles/setup/_mq.scss
@@ -200,9 +200,9 @@
 
             @media (min-width: 900px) {
                 background-image: url("../src/assets/img/bg-mini-signup.webp");
-                background-size: cover;
+                background-size: contain;
                 background-repeat: no-repeat;
-                background-position: center;
+                background-position: right;
             }
 
             @media (min-width: 1160px) {
