--- a/Frontend/src/assets/styles/main.scss
+++ b/Frontend/src/assets/styles/main.scss
@@ -35,6 +35,7 @@
 
 @import "cmps/UserInfo";
 @import "cmps/UserModal";
+@import "cmps/UserReviews";
 @import "cmps/UserGigs";
 @import "cmps/UserOrders";
 @import "cmps/DenyModal";
