--- a/Frontend/src/assets/styles/cmps/_UserOrders.scss
+++ b/Frontend/src/assets/styles/cmps/_UserOrders.scss
@@ -30,6 +30,7 @@
                 height: 200px;
                 padding: 23px;
                 border: 1px solid $clrSecondary2;
+                border-radius: 8px;
                 margin-block-start: 20px;
                 background-color: $clrPrimary1;
 
