--- a/Frontend/src/assets/styles/cmps/_ImageCarousel.scss
+++ b/Frontend/src/assets/styles/cmps/_ImageCarousel.scss
@@ -1,17 +1,23 @@
 .carousel-container {
   overflow: hidden;
   position: relative;
-  border-radius: .5em;
+  border-radius: 0.5em;
+  height: 100%;
+  width: 100%;
 
   .carousel {
     height: 100%;
     overflow: hidden;
+    display: flex;
+    transition: transform 0.3s ease-in-out;
+    
     .carousel-item {
       width: 100%;
       height: 100%;
       position: relative;
       background: linear-gradient(180deg, #fff, #b5b6ba);
       object-fit: contain;
+     
     }
     .carousel-item::after {
       background-image: linear-gradient(
@@ -25,7 +31,7 @@
       left: 0;
       position: absolute;
       width: 100%;
-      z-index: 0;
+      z-index: 1;
     }
   }
 
@@ -83,27 +89,40 @@
   .dot-container {
     display: flex;
     justify-content: center;
-    margin-top: 10px;
+    align-items: center;
     position: absolute;
-    z-index: 3;
+    z-index: 10;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 1em;
 
     .dot {
-      width: 10px;
-      height: 10px;
-      background-color: #ccc;
       border: none;
-      border-radius: 50%;
       margin: 0 5px;
       cursor: pointer;
-      transition: transform 0.2s ease-in-out;
+      transition: .3s;
+      font-size: 1em;
+      &:after {
+        content: "\25CF";
+        color: #ccc;
+      }
     }
 
     .dot:hover {
+      transform:translateY(-3px);
       transform: scale(1.2);
+      &:after {
+        color: #fff;
+      }
     }
 
     .dot.active {
-      background-color: whitesmoke;
+      transform:translateY(-3px);
+      transform: scale(1.2);
+      &:after {
+        color: #fff;
+      }
     }
   }
 }
