--- a/Frontend/src/assets/styles/cmps/_UserInfo.scss
+++ b/Frontend/src/assets/styles/cmps/_UserInfo.scss
@@ -14,7 +14,7 @@
         border: 1px solid $clrSecondary2;
         margin-block-end: 20px;
 
-        &:last-child {
+        &:nth-child(2) {
             justify-content: start;
             align-items: start;
 
