slight carousel buttons tweak

--- a/Frontend/src/assets/styles/cmps/_ServicesCarousel.scss
+++ b/Frontend/src/assets/styles/cmps/_ServicesCarousel.scss
@@ -1,7 +1,7 @@
 .home-wrapper {
     .home-services-section {
         position: relative;
-        overflow: hidden;
+        overflow: visible;
         max-width: 1400px;
         margin: auto;
 
