--- a/Frontend/src/assets/styles/cmps/_GigOrder.scss
+++ b/Frontend/src/assets/styles/cmps/_GigOrder.scss
@@ -9,10 +9,15 @@
     padding: 24px;
     border: 1px solid $clrSecondary2;
     background-color: $clrPrimary1;
-
+    color: $clrPrimary2;
+    
     .title {
         display: flex;
         justify-content: space-between;
+    }
+    
+    p{ 
+        color:$clrSecondary6;
     }
 
     img {
@@ -22,6 +27,8 @@
     .shipping-info {
         display: flex;
         justify-content: space-between;
+        color:$clrSecondary6;
+        font-weight: bold;
 
         .inside-shipping {
             display: flex;
@@ -35,9 +42,9 @@
     ul {
         list-style: none;
         padding: 0;
-
+        color:$clrSecondary6;
         img {
-            margin-inline-end: 12px;
+            margin-inline-end: 16px;
         }
     }
 
@@ -56,10 +63,10 @@
                 justify-content: center;
                 width: 100%;
                 height: 40px;
-                background-color: $clr1;
+                background-color: $clrPrimary2;
                 color: $clrPrimary1;
-                border: 1px solid $clr1;
-                border-radius: 3px;
+                border: 1px solid $clrPrimary2;
+                border-radius: 4px;
 
                 img {
                     position: relative;
