--- a/Frontend/src/assets/styles/cmps/_AboutSeller.scss
+++ b/Frontend/src/assets/styles/cmps/_AboutSeller.scss
@@ -1,4 +1,5 @@
 .about-seller {
+    color: $clrPrimary2;
     .seller {
         display: flex;
         margin-block-start: 15px;
@@ -44,7 +45,7 @@
 
     .seller-info {
         border: 1px solid $clrSecondary2;
-        color: $clrSecondary5;
+        color: $clrSecondary6;
         padding: 24px;
         margin-block-start: 15px;
         margin-block-end: 15px;
